--- a/index.html
+++ b/index.html
@@ -1,25 +1,63 @@
 
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
   <meta charset="UTF-8" />
-  <title>2.1.4工具清單</title>
+  <title>2.1.4氣候變遷資料應用工具</title>
+  <meta property="og:title" content="2.1.4氣候變遷資料應用工具" />
+  <meta property="og:description" content="整合多項實用資料處理工具 – 雲端下載、資料合併、格式轉換等" />
+  <meta property="og:image" content="https://tedliu13.github.io/tools/images/toollist_og_image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tedliu13.github.io/tools/index.html" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background-color: #f8f9fa; }
+    body {
+      background-color: #0f1c2e;
+      background-image: url('images/background.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: #e0e6f0;
+      font-family: "微軟正黑體", sans-serif;
+    }
+    .card {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #e0e6f0;
+      border: 1px solid #3a4b63;
+    }
+    .card-title {
+      color: #ffffff;
+    }
+    .btn-primary {
+      background-color: #2c5aa0;
+      border-color: #2c5aa0;
+    }
+    .btn-secondary {
+      background-color: #506c8a;
+      border-color: #506c8a;
+    }
     .card-img-left {
       width: 100%;
       height: 100%;
       object-fit: contain;
-      background-color: white;
+      background-color: transparent;
     }
-    .card { overflow: hidden; }
+    .overlay {
+      background-color: rgba(15, 28, 46, 0.85);
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+    }
+    .text-muted {
+      color: #ffffff !important;
+    }
   </style>
 </head>
 <body>
-  <div class="container mt-4">
-    <h2 class="text-center mb-4">🧰 2.1.4工具清單</h2>
-    <div class="row g-4" id="tool-list"></div>
+  <div class="overlay">
+    <div class="container">
+      <h2 class="text-center mb-4">🧰2.1.4氣候變遷資料應用工具</h2>
+      <div class="row g-4" id="tool-list"></div>
+    </div>
   </div>
 
   <script>
