--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
       <h2 class="text-center mb-4">🧰 2.1.4 氣候變遷資料應用工具</h2>
       <div class="d-flex flex-wrap justify-content-center mb-4">
         <select id="filter-interface" class="form-select form-select-sm w-auto">
-          <option value="">所有介面</option>
+          <option value="">介面樣式</option>
           <option>程式介面</option>
           <option>網頁介面</option>
         </select>
         <select id="filter-domain" class="form-select form-select-sm w-auto">
-          <option value="">所有領域</option>
+          <option value="">領域類別</option>
           <option>淹水</option>
           <option>坡地</option>
           <option>農業</option>
@@ -78,10 +78,10 @@
           <option>漁業</option>
         </select>
         <select id="filter-release" class="form-select form-select-sm w-auto">
-          <option value="">所有釋出時間</option>
+          <option value="">釋出時間</option>
         </select>
         <select id="filter-status" class="form-select form-select-sm w-auto">
-          <option value="">所有狀態</option>
+          <option value="">使用狀態</option>
           <option>使用中</option>
           <option>停止使用</option>
         </select>
