--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </select>
         <select id="filter-domain" class="form-select form-select-sm w-auto">
           <option value="">領域類別</option>
+          <option>無限定</option>
           <option>淹水</option>
           <option>坡地</option>
           <option>農業</option>
