--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         col.innerHTML = `
           <div class="card h-100">
-            <div class="row g-0 align-items-center">
+            <div class="row g-0 d-flex align-items-start">
               <div class="col-5 p-2">
                 <a href="${tool.download}" target="_blank">
                 <img src="${tool.image}" class="card-img-left img-fluid" alt="${tool.name}"></a>
