--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RVWP1JBC3R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RVWP1JBC3R');
+</script>
   <meta charset="UTF-8" />
   <title>2.1.4 氣候變遷資料應用工具</title>
   <meta property="og:title" content="2.1.4 氣候變遷資料應用工具" />
@@ -123,15 +132,25 @@
 
         let docButton = '';
         if (tool.doc && tool.doc.trim() !== '') {
-          docButton = `<a href="${tool.doc}" class="btn btn-secondary btn-sm ms-2" target="_blank">說明</a>`;
+          docButton = `<a href="${tool.doc}" class="btn btn-secondary btn-sm ms-2" target="_blank"
+          onclick="gtag('event', 'doc_click', {
+            event_category: '說明',
+            event_label: '${tool.name}'
+          })">說明</a>`;
+
         }
 
         col.innerHTML = `
           <div class="card h-100">
             <div class="row g-0 d-flex align-items-start">
               <div class="col-5 p-2">
-                <a href="${tool.download}" target="_blank">
-                <img src="${tool.image}" class="card-img-left img-fluid" alt="${tool.name}"></a>
+                <a href="${tool.download}" target="_blank"
+                  onclick="gtag('event', 'image_click', {
+                    event_category: '圖片點擊',
+                    event_label: '${tool.name}'
+                  })">
+                  <img src="${tool.image}" alt="${tool.name}" class="card-img-left img-fluid">
+                </a>
               </div>
               <div class="col-7">
                 <div class="card-body">
@@ -141,7 +160,11 @@
                   <p class="mb-1"><strong>適合領域：</strong>${tool.domain.join("、")}</p>
                   <p class="mb-1"><strong>釋出時間：</strong>${tool.release}</p>
                   <p class="mb-2"><strong>使用狀態：</strong>${tool.status}</p>
-                  <a href="${tool.download}" class="btn btn-primary btn-sm" target="_blank">連結</a>
+                  <a href="${tool.download}" class="btn btn-primary btn-sm" target="_blank"
+                    onclick="gtag('event', 'download_click', {
+                      event_category: '下載',
+                      event_label: '${tool.name}'
+                    })">連結</a>
                   ${docButton}
                   <p class="mt-2 text-muted">備註：${tool.note || '無'}</p>
                 </div>
