--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   gtag('config', 'G-RVWP1JBC3R');
 </script>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>2.1.4 氣候變遷資料應用工具</title>
   <meta property="og:title" content="2.1.4 氣候變遷資料應用工具" />
   <meta property="og:description" content="整合多項實用資料處理工具 – 雲端下載、資料合併、格式轉換等" />
